Fri Aug 20 08:17:52 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/quad.cc (quad): Delete unused label.

	* unwind-prot.cc (saved_variable::~saved_variable): Don't try to
	delete gen_ptr_value here.

Mon Aug 16 21:34:33 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l (next_token_is_sep_op): New function.
	(handle_close_brace, maybe_unput_comma): Use it.
	(have_continuation): Also handle CRLF here.

Wed Aug 11 16:06:57 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* file-io.cc (Ffopen): Make fopen ("filename") work and imply that
	MODE = "r".

Wed Jul 21 15:38:52 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* help.cc (display_names_from_help_list): Sort names before
	listing them.
	(print_symbol_type, Ftype): Also handle built-in constants.
	(LIST_SYMBOLS): Correct call to symbol_table::name_list.
	(simple_help): List constants here too.  List constants and
	variables before functions, not after.  Sort names before listing
	them.

	* variables.cc (do_who): Display built-in constants in a separate
	section.

	* error.cc (bind_global_error_variable, clear_global_error_variable): 
	Call bind_builtin_constant, not bind_builtin_variable to set
	__error_text__.
	* octave.cc (intern_argv): Likewise, for argv and __argv__.

	* defun.cc (install_builtin_constant): Move function guts to
	bind_builtin_constant in variables.cc.
	* variables.cc (bind_builtin_constant): New function.

	* symtab.cc (symbol_record::define, symbol_record::variable_reference):
	Handle constants the same as functions.
	(symbol_record::link_to_builtin_variable): New function.
	(symbol_record::define_builtin_const): New function.
	(symbol_record::define_as_fcn): Delete unused function.
	(symbol_record::read_only_error):
	Handle constants the same as variables.
	* symtab.h (symbol_record::BUILTIN_CONSTANT): New enum value.
	(symbol_record::symbol_type): Increase width to 7 bits.
	(symbol_record::symbol_def::is_constant): New function.